--- a/css/main.css
+++ b/css/main.css
@@ -829,6 +829,43 @@ section,
   border: 2px solid #075e54;
 }
 
+
+/*-------------------------------
+# Portfolio // Galeria // Produtos
+----------------------------------*/
+
+.portfolio .portfolio-filters {  /* UL */
+  padding: 0;
+  margin: 0 auto 20px auto;
+  text-align: center;
+  list-style: none;
+}
+
+.portfolio .portfolio-filters li {
+  display: inline-block;
+  cursor: pointer;
+  padding: 5px;
+  margin: 0;
+  font-size: 18px;
+  font-weight: 500;
+  transition: all .3s ease-in-out;
+  margin-bottom: 5px;
+}
+
+.portfolio .portfolio-filters li:hover,
+.portfolio .portfolio-filters li.filter-active {
+  color: #428bca;
+  font-weight: 600;
+  transition: all .3s ease-in-out;
+} 
+
+
+
+
+
+
+
+
 /*-------------------------------
 # Scroll to TOP
 ----------------------------------*/
