--- a/css/main.css
+++ b/css/main.css
@@ -991,6 +991,25 @@ section,
 }
 
 /*-------------------------------
+# Equipe // TEAM
+----------------------------------*/
+
+.team .member {
+  position: relative;
+  overflow: hidden;
+}
+
+.team .member .member-info {
+  position: absolute;
+  opacity: 0;
+  inset: 0;
+  transition: all 0.2s ease-in;
+}
+
+
+
+
+/*-------------------------------
 # Scroll to TOP
 ----------------------------------*/
 
