--- a/css/main.css
+++ b/css/main.css
@@ -1091,6 +1091,8 @@ section,
   margin: 0;
 }
 
+/* Forms */
+
 .contact .email-form {
   background: color-mix(in srgb, var(--default-color), transparent 96%);
   padding: 30px;
@@ -1121,7 +1123,148 @@ section,
   color: #c9c9c9a8;
 }
 
+/* ---------------------
+# Footer 
+---------------- */
+.footer {
+  color: var(--contrast-color);
+  font-size: 14px;
+  position: relative;
+}
 
+.footer .footer-top {
+  padding-top: 50px;
+}
+
+.footer .footer-about .logo {
+  margin-bottom: 25px;
+  line-height: 1;
+}
+
+.footer .footer-about .logo span {
+  font-size: 26px;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-family: var(--default-font);
+}
+
+.footer .footer-about p {
+  margin-bottom: 0;
+}
+
+.footer .social-links a {
+  display: flex;
+  margin-right: 10px;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #e3e0e07c;
+  border-radius: 50%;
+  font-size: 16px;
+  color: #e3e0e07c;
+  transition: 0.3s;
+}
+
+.footer .social-links a:hover {
+  color: #428bca;
+  border-color: #428bca;
+}
+
+.footer h4 {
+  color: #fff;
+  font-weight: bold;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+.footer .footer-links {
+  margin-bottom: 30px;
+}
+
+.footer .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer .footer-links ul li {
+  padding: 10px 0;
+  font-size: 12px;
+  align-items: center;
+}
+
+.footer .footer-links ul li:first-child {
+  padding-top: 0;
+}
+
+.footer .footer-links ul a {
+  color: #cacacaa1;
+  display: inline-block;
+  line-height: 1;
+}
+
+.footer .footer-links ul a:hover {
+  color: #fff;
+}
+
+.footer .footer-newsletter .newsletter-form {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  padding: 6px 8px;
+  position: relative;
+  border-radius: 4px;
+  display: flex;
+  transition: 0.3s;
+  background-color: #060606;
+  border: 1px solid #aaaaaa88;
+}
+
+.footer .footer-newsletter .newsletter-form:focus-within {
+  border-color: var(--accent-color);
+}
+
+.footer .footer-newsletter .newsletter-form input[type=email] {
+  border: 0;
+  padding: 4px;
+  width: 100%;
+  background-color: #060606;
+  color: #fff;
+}
+
+.footer .footer-newsletter .newsletter-form input[type=email]:focus-visible {
+  outline: none;
+}
+
+.footer .footer-newsletter .newsletter-form input[type=submit] {
+  border: 0;
+  font-size: 16px;
+  padding: 0 20px;
+  margin: -7px -9px -7px 0;
+  background: #428bca;
+  color: #fff;
+  transition: 0.3s;
+  border-radius: 0 4px 4px 0;
+}
+
+.footer .footer-newsletter .newsletter-form input[type=submit]:hover {
+  background: #2e628f;
+}
+
+.footer .copyright {
+  padding: 25px 0;
+  border-top: 1px solid #cccccc48;
+}
+
+.footer .copyright p {
+  margin-bottom: 0;
+}
+
+.footer .credits {
+  margin-top: 6px;
+  font-size: 13px;
+}
 
 /*-------------------------------
 # Scroll to TOP
@@ -1159,4 +1302,3 @@ section,
 .scroll-top i:hover {
   color: #428bca;
 }
-
